# python-opencnpj

./: .gitignore  LICENSE  README.md  pyproject.toml
opencnpj/: __init__.py  exceptions.py  opencnpj.py  utils.py
tests/: test_class.py
